[project]
name = "healthcare-appoitnment-scheduling-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
